<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewAccount"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    >

    <!-- layout manager -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="4dp">

        <!-- invisible textview to hold the account number-->
        <TextView
            android:id="@+id/textViewAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <!-- show account name -->
        <TextView
            android:id="@+id/textViewAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>

        <!-- account amount -->
        <TextView
            android:id="@+id/textViewAccountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_margin="4dp"/>

        <!-- show the three last transactions -->
        <LinearLayout
            android:id="@+id/linearLayoutLastTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"> <!-- ?? -->

            <!-- last transaction -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/textViewDescTransaction1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewValueTransaction1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:visibility="invisible"/>
            </LinearLayout>

            <!-- second last transaction -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/textViewDescTransaction2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewValueTransaction2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:visibility="invisible"/>
            </LinearLayout>

            <!-- thirth last transaction -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/textViewDescTransaction3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textViewValueTransaction3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>

        <!-- button to see more transactions in another activity -->
        <Button
            android:id="@+id/buttonShowMoreTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_more_transactions" />

        <!-- the nexts views is to add a new transaction-->
        <!-- textview to insert the new transaction value-->
        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="$"
            android:inputType="numberSigned"
            android:cursorVisible="false"/>

        <!-- textview to input a description -->
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>

        <!-- choose a category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd">

            </Spinner>

        </LinearLayout>

        <!-- set recorrency -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/checkBoxrecorrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recurrent"
                android:checked="false"/>

            <EditText
                android:id="@+id/editTextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="MM"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editTextYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="YYYY"
                android:visibility="gone"/>

        </LinearLayout>

        <!-- add a new transction -->
        <Button
            android:id="@+id/buttonNewTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_transaction" />
    </LinearLayout>

</android.support.v7.widget.CardView>